# reflectioncpp

./: .gitignore  CMakeLists.txt  Variant.hpp  any.hpp  common.cpp  common.hpp  compiletime.hpp  export.cpp  method.hpp  primitive.cpp  test.cpp  type.cpp  type.hpp  variant.hpp
doc/: results.txt
experiment/: a.out  specialhash.hpp  specialtest.cpp  test.cpp
include/reflectioncpp/: any.hpp  constructor.hpp  invokable.hpp  method.hpp  primitive.hpp  type.hpp
include/reflectioncpp/internal/: method_noreturn.hpp  method_normalreturn.hpp  method_referencereturn.hpp  type_definitions.hpp
internal/: type_definitions.hpp
src/experiment/: complexity.cpp
src/experiment/compiletime/: compiletime.hpp  compiletime_test.cpp
src/test/: test.cpp
